add icon and modify UI

--- a/src/Components/css/SwiperHighlight.module.css
+++ b/src/Components/css/SwiperHighlight.module.css
@@ -1,7 +1,7 @@
 .swiperView {
   height: 250px;
   width:150px;
-  background-color: yellow;
+  background-color:white;
 }
 .matchInfo {
   display: flex;
