--- a/src/hoc/Panel.module.css
+++ b/src/hoc/Panel.module.css
@@ -4,8 +4,9 @@
   margin-left: 10px;
   margin-right: 10px;
   padding-left: 30px;
+  padding-right:30px;
   background-color: #da9833;
-  border-radius: 5px;
+  border-radius: 8px;
   padding-top: 20px;
   padding-bottom: 10px;
 }
