--- a/src/Components/css/SwiperHighlight.css
+++ b/src/Components/css/SwiperHighlight.css
@@ -1,4 +1,5 @@
 .itemsContainer {
+  /* background:red;  */
   float:left;
   position:relative
 }
@@ -11,4 +12,18 @@ position : absolute;
   margin:0 auto; left:0px;
   right:0px;
   z-index:100
+} 
+.right-arrow {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+.left-arrow {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+i {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
 }
